@@ -14,6 +14,7 @@
 * Tweak - Update recurring payments copy on payment gateways page.
 * Fix - Incorrect text when filtering subscriptions to no results.
 * Changed - Subscription products must have a recurring amount greater than $0.
+* Fix - Return correct product prices datatype in WCPay.
 
 = 3.4.0 - 2021-12-08 =
 * Add - Allow UI customizations on checkout payment fields.
